--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -2,6 +2,8 @@
 
 name: Backend CI - Test, Build and Push Images to ACR
 
+# CI trigger test comment
+
 # Trigger the workflow on pushes to the 'main' branch
 # You can also add 'pull_request:' to run on PRs
 on:
